--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  connectivity: 0.4.9+5
+  connectivity: 2.0.0
   fluttertoast: 7.1.1
 
 dev_dependencies:
