--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   material_design_icons_flutter: 4.0.5855
   connectivity: 2.0.2
   fluttertoast: 7.1.8
+  provider: 5.0.0
 
 dev_dependencies:
   flutter_test:
