--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  material_design_icons_flutter: ^5.0.5955-rc.1
+  material_design_icons_flutter: ^5.0.6295
   connectivity: ^3.0.6
   fluttertoast: ^8.0.7
   provider: ^6.0.0
