--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: harcapp_core
 description: A new Flutter package project.
 version: 0.0.1
-author: Daniel Iwanicki
 homepage:
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
   flutter: ">=1.17.0 <2.0.0"
 
 dependencies:
@@ -18,6 +17,7 @@ dependencies:
   oktoast: ^3.2.0
   provider: ^6.0.2
   tuple: ^2.0.0
+  url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_test:
