--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  connectivity: ^3.0.6
+  connectivity_plus: ^4.0.2
   fluttertoast: ^8.2.2
   material_design_icons_flutter: ^7.0.7296
   oktoast: ^3.3.1
   provider: ^6.0.5
-  tuple: ^2.0.1
+  tuple: ^2.0.2
   url_launcher: ^6.1.11
 
 dev_dependencies:
