--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,14 @@ dependencies:
 
   connectivity_plus: ^4.0.2
   fluttertoast: ^8.2.2
+  implicitly_animated_reorderable_list_2: ^0.5.1
+  linked_scroll_controller: ^0.2.0
   material_design_icons_flutter: ^7.0.7296
   oktoast: ^3.3.1
   provider: ^6.0.5
   tuple: ^2.0.2
   url_launcher: ^6.1.11
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
