--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  auto_size_text: ^3.0.0
   connectivity_plus: ^5.0.2
   fluttertoast: ^8.2.2
+  flutter_feather_icons: ^2.0.0+1
   implicitly_animated_reorderable_list_2: ^0.5.1
   linked_scroll_controller: ^0.2.0
   material_design_icons_flutter: ^7.0.7296
+  native_device_orientation: ^1.1.4
   oktoast: ^3.3.1
   provider: ^6.0.5
   tuple: ^2.0.2
