--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: harcapp_core
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: harcapp.web.app
 
 environment:
   sdk: '>=3.0.2 <4.0.0'
