--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   decorated_icon: ^1.2.1
   fluttertoast: ^8.2.2
   flutter_feather_icons: ^2.0.0+1
+  flutter_spinkit: ^5.2.0
   flutter_widget_from_html: ^0.14.9
   implicitly_animated_reorderable_list_2: ^0.5.1
   linked_scroll_controller: ^0.2.0
