--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,33 +38,52 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
+  assets:
 
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
+    - assets/images/meto/
+
+    - assets/konspekty/
+    - assets/konspekty/beretowa/
+    - assets/konspekty/bibliodrama/
+    - assets/konspekty/biwak_bez_nadzoru/
+    - assets/konspekty/budowanie_kapliczki/
+    - assets/konspekty/budowanie_szopki_bozonarodzeniowej/
+    - assets/konspekty/druzynowe_mycie_w_jeziorze/
+    - assets/konspekty/ekstremalna_droga_krzyzowa/
+    - assets/konspekty/gang_potencjalnych_porywaczy/
+    - assets/konspekty/gaweda_o_swietym/
+    - assets/konspekty/ignacjanski_rachunek_sumienia/
+    - assets/konspekty/kadrowe_msze/
+    - assets/konspekty/kalambury_z_prawa_harcerskiego/
+    - assets/konspekty/kalambury_z_prawa_zucha/
+    - assets/konspekty/kilkutygodniowe_obozowanie_w_lesie/
+    - assets/konspekty/koledowanie_z_quizem_interpretacyjnym/
+    - assets/konspekty/kontrowersyjna_dyskusja/
+    - assets/konspekty/modlitwa_przed_posilkiem/
+    - assets/konspekty/musztra_i_dbalosc_o_umundurowanie/
+    - assets/konspekty/negocjowanie_koalicji_wlasnych_partii_politycznych/
+    - assets/konspekty/nocne_podkradanie/
+    - assets/konspekty/opieka_nad_roslinka/
+    - assets/konspekty/opowiedzenie_gawedy_o_autorytecie/
+    - assets/konspekty/padnij_za_zbyt_wolno_wykonana_zbiorke/
+    - assets/konspekty/pielgrzymka_druzyny/
+    - assets/konspekty/post/
+    - assets/konspekty/pozno_zyciowe_rozmowy/
+    - assets/konspekty/rowerowe_nabozenstwo_majowe/
+    - assets/konspekty/refleksja_nad_aksjomatem_ducha/
+    - assets/konspekty/rozpoczynanie_posilku_wspolnym_spiewaniem/
+    - assets/konspekty/sad_nad_postawa/
+    - assets/konspekty/spiewogranie_z_quizem_interpretacyjnym/
+    - assets/konspekty/staly_spowiednik/
+    - assets/konspekty/sznury_funkcje_stopnie/
+    - assets/konspekty/warta_nocna/
+    - assets/konspekty/wedrowka/
+    - assets/konspekty/wedrowka_bez_zasobow/
+    - assets/konspekty/wedrowka_medytacyjna/
+    - assets/konspekty/wieczorne_przeprosiny_i_podziekowania/
+    - assets/konspekty/wlasny_nagrobek/
+    - assets/konspekty/wspolna_minuta_czosnku/
+    - assets/konspekty/zagadki_matematyczno_logiczne/
+    - assets/konspekty/zakwaterowanie_pod_namiotem/
+    - assets/konspekty/zimowiskowe_apele_przed_osrodkiem/
+    - assets/konspekty/zwiad_lokalnej_spolecznosci/
