--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,11 @@ dependencies:
   flutter_widget_from_html: ^0.14.9
   implicitly_animated_reorderable_list_2: ^0.5.1
   linked_scroll_controller: ^0.2.0
+  logger: ^2.0.2+1
   material_design_icons_flutter: ^7.0.7296
   native_device_orientation: ^1.1.4
   oktoast: ^3.3.1
+  open_filex: ^4.4.0
   provider: ^6.0.5
   tuple: ^2.0.2
   url_launcher: ^6.1.11
