--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage: harcapp.web.app
 
 environment:
-  sdk: '>=3.2.2 <4.0.0'
+  sdk: '>=3.3.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -16,6 +16,7 @@ dependencies:
   fluttertoast: ^8.2.2
   flutter_feather_icons: ^2.0.0+1
   flutter_spinkit: ^5.2.0
+  flutter_svg: ^2.0.9
   flutter_widget_from_html: ^0.14.9
   implicitly_animated_reorderable_list_2: ^0.5.1
   linked_scroll_controller: ^0.2.0
