--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  assets_audio_player: ^3.1.0
   auto_size_text: ^3.0.0
   connectivity_plus: ^6.0.1
   decorated_icon: ^1.2.1
@@ -46,6 +47,8 @@ flutter:
 
     - assets/images/meto/
 
+    - assets/forms/
+    - assets/gawedy/
     - assets/konspekty/
     - assets/konspekty/beretowa/
     - assets/konspekty/bibliodrama/
