--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,3 +94,4 @@ flutter:
     - assets/konspekty/zakwaterowanie_pod_namiotem/
     - assets/konspekty/zimowiskowe_apele_przed_osrodkiem/
     - assets/konspekty/zwiad_lokalnej_spolecznosci/
+    - assets/wiersze/
