--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - assets/konspekty/refleksja_nad_aksjomatem_ducha/
     - assets/konspekty/rozpoczynanie_posilku_wspolnym_spiewaniem/
     - assets/konspekty/sad_nad_postawa/
+    - assets/konspekty/savoir_vivre_urzadzen_mobilnych/
     - assets/konspekty/spiewogranie_z_quizem_interpretacyjnym/
     - assets/konspekty/staly_spowiednik/
     - assets/konspekty/sznury_funkcje_stopnie/
