--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   flutter_svg: ^2.0.10+1
   flutter_widget_from_html: ^0.14.9
+  htmltopdfwidgets: ^1.0.3
   implicitly_animated_reorderable_list_2: ^0.5.1
   linked_scroll_controller: ^0.2.0
   logger: ^2.0.2+1
@@ -27,6 +28,8 @@ dependencies:
   native_device_orientation: ^2.0.3
   oktoast: ^3.3.1
   open_filex: ^4.4.0
+  pdf: ^3.8.1
+  printing: ^5.9.1
   provider: ^6.0.5
   tuple: ^2.0.2
   url_launcher: ^6.1.11
