--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,11 @@ dependencies:
   flutter_spinkit: ^5.2.0
   flutter_svg: ^2.0.10+1
   flutter_widget_from_html: ^0.15.1
-  htmltopdfwidgets: ^1.0.3
+  # htmltopdfwidgets: ^1.0.3
+  htmltopdfwidgets:
+    git:
+      url: https://github.com/n3o2k7i8ch5/htmltopdfwidgets
+
   implicitly_animated_reorderable_list_2: ^0.6.0
   linked_scroll_controller: ^0.2.0
   logger: ^2.0.2+1
