--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/konspekty/harcerskie/opowiedzenie_gawedy_o_autorytecie/
     - assets/konspekty/harcerskie/padnij_za_zbyt_wolno_wykonana_zbiorke/
     - assets/konspekty/harcerskie/pielgrzymka_druzyny/
+    - assets/konspekty/harcerskie/podzial_pirackiego_lupu/
     - assets/konspekty/harcerskie/post/
     - assets/konspekty/harcerskie/pozno_zyciowe_rozmowy/
     - assets/konspekty/harcerskie/rowerowe_nabozenstwo_majowe/
