--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,8 @@ flutter:
     - assets/konspekty/harcerskie/sad_nad_postawa/
     - assets/konspekty/harcerskie/savoir_vivre_urzadzen_mobilnych/
     - assets/konspekty/harcerskie/spiewogranie_z_quizem_interpretacyjnym/
+    - assets/konspekty/harcerskie/swieczka_prawa_harcerskiego/
+    - assets/konspekty/harcerskie/swieczka_prawa_zuchowego/
     - assets/konspekty/harcerskie/staly_spowiednik/
     - assets/konspekty/harcerskie/sznury_funkcje_stopnie/
     - assets/konspekty/harcerskie/warta_nocna/
