--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ flutter:
     - assets/konspekty/harcerskie/zakwaterowanie_pod_namiotem/
     - assets/konspekty/harcerskie/zimowiskowe_apele_przed_osrodkiem/
     - assets/konspekty/harcerskie/zwiad_lokalnej_spolecznosci/
+    - assets/konspekty/harcerskie/zycie_i_swiat_w_prl/
 
     - assets/konspekty/ksztalcenie/
     - assets/konspekty/ksztalcenie/wstep_do_wychowania_duchowego/
