--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
 
     - assets/konspekty/harcerskie/
     - assets/konspekty/harcerskie/beretowa/
+    - assets/konspekty/harcerskie/druzynowe_przekazanie_bsp/
     - assets/konspekty/harcerskie/bibliodrama/
     - assets/konspekty/harcerskie/biwak_bez_nadzoru/
     - assets/konspekty/harcerskie/budowanie_kapliczki/
