--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   tuple: ^2.0.2
   url_launcher: ^6.1.11
   uuid: ^3.0.7
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
   flutter_test:
