--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   decorated_icon: ^1.2.1
   fluttertoast: ^8.2.8
   flutter_feather_icons: ^2.0.0+1
+  flutter_layout_grid: 2.0.7
   flutter_spinkit: ^5.2.0
   flutter_svg: ^2.0.10+1
   flutter_widget_from_html: ^0.15.1
