--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/konspekty/harcerskie/budowanie_szopki_bozonarodzeniowej/
     - assets/konspekty/harcerskie/druzynowe_mycie_w_jeziorze/
     - assets/konspekty/harcerskie/druzynowe_przekazanie_bsp/
+    - assets/konspekty/harcerskie/dwie_roty_dwoch_przyrzeczen_harcerskich/
     - assets/konspekty/harcerskie/ekstremalna_droga_krzyzowa/
     - assets/konspekty/harcerskie/gang_potencjalnych_porywaczy/
     - assets/konspekty/harcerskie/gaweda_o_swietym/
