--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -125,6 +125,8 @@ flutter:
     - assets/konspekty/ksztalcenie/wstep_do_wychowania_duchowego/
     - assets/konspekty/ksztalcenie/dwie_roty_dwoch_przyrzeczen_harcerskich/
 
+    - assets/poradnik/dwie_roty_dwoch_przyrzeczen_harcerskich/
+
     - assets/wiersze/
 
     - fonts/
