--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,7 @@ flutter:
     - assets/konspekty/ksztalcenie/dwie_roty_dwoch_przyrzeczen_harcerskich/
 
     - assets/poradnik/dwie_roty_dwoch_przyrzeczen_harcerskich/
+    - assets/poradnik/o_strukturze_i_ksztaltowaniu_duchowosci/
 
     - assets/wiersze/
 
