--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ flutter:
     - assets/konspekty/harcerskie/koledowanie_z_quizem_interpretacyjnym/
     - assets/konspekty/harcerskie/kontrowersyjna_dyskusja/
     - assets/konspekty/harcerskie/modlitwa_przed_posilkiem/
+    - assets/konspekty/harcerskie/msza_obozowa_lecz_nie_tylko/
     - assets/konspekty/harcerskie/musztra_i_dbalosc_o_umundurowanie/
     - assets/konspekty/harcerskie/negocjowanie_koalicji_wlasnych_partii_politycznych/
     - assets/konspekty/harcerskie/nocne_podkradanie/
