--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,17 +20,12 @@ dependencies:
   flutter_spinkit: ^5.2.0
   flutter_svg: ^2.0.10+1
   flutter_widget_from_html: ^0.15.2
-  # htmltopdfwidgets: ^1.0.3
   html_pdf_widgets: ^0.0.2
-  #  html_pdf_widgets:
-  #    git:
-  #      url: https://github.com/n3o2k7i8ch5/htmltopdfwidgets
-
   implicitly_animated_reorderable_list_2: ^0.6.0
   linked_scroll_controller: ^0.2.0
   logger: ^2.0.2+1
   material_design_icons_flutter: ^7.0.7296
-  mime: 1.0.5
+  mime: ^2.0.0
   native_device_orientation: ^2.0.3
   oktoast: ^3.3.1
   open_filex: ^4.4.0
