--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,32 +10,32 @@ dependencies:
   flutter:
     sdk: flutter
 
-  assets_audio_player: ^3.1.0
+  assets_audio_player: ^3.1.1
   auto_size_text: ^3.0.0
-  connectivity_plus: ^6.0.5
+  connectivity_plus: ^6.1.2
   decorated_icon: ^1.2.1
-  fluttertoast: ^8.2.8
+  fluttertoast: ^8.2.10
   flutter_feather_icons: ^2.0.0+1
   flutter_layout_grid: 2.0.7
-  flutter_spinkit: ^5.2.0
-  flutter_svg: ^2.0.10+1
-  flutter_widget_from_html: ^0.15.2
+  flutter_spinkit: ^5.2.1
+  flutter_svg: ^2.0.17
+  flutter_widget_from_html: ^0.15.3
   html_pdf_widgets: ^0.0.2
   implicitly_animated_reorderable_list_2: ^0.6.0
   linked_scroll_controller: ^0.2.0
-  logger: ^2.0.2+1
+  logger: ^2.5.0
   material_design_icons_flutter: ^7.0.7296
   mime: ^2.0.0
   native_device_orientation: ^2.0.3
-  oktoast: ^3.3.1
-  open_filex: ^4.4.0
-  pdf: ^3.8.1
-  printing: ^5.13.1
-  provider: ^6.0.5
+  oktoast: ^3.4.0
+  open_filex: ^4.6.0
+  pdf: ^3.11.2
+  printing: ^5.14.0
+  provider: ^6.1.2
   tuple: ^2.0.2
-  url_launcher: ^6.1.11
+  url_launcher: ^6.3.1
   uuid: ^3.0.7
-  webfeed_plus: ^1.0.1+1
+  webfeed_plus: ^1.1.2
   youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
