--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   auto_size_text: ^3.0.0
   connectivity_plus: ^6.1.2
   decorated_icon: ^1.2.1
+  dio: ^5.7.0
   fluttertoast: ^8.2.10
   flutter_feather_icons: ^2.0.0+1
   flutter_layout_grid: 2.0.7
@@ -21,6 +22,7 @@ dependencies:
   flutter_svg: ^2.0.17
   flutter_widget_from_html: ^0.15.3
   html_pdf_widgets: ^0.0.2
+  html_unescape: ^2.0.0
   implicitly_animated_reorderable_list_2: ^0.6.0
   linked_scroll_controller: ^0.2.0
   logger: ^2.5.0
