--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   auto_size_text: ^3.0.0
   connectivity_plus: ^6.1.2
   decorated_icon: ^1.2.1
-  dio: ^5.7.0
+  dio: ^5.8.0+1
   fluttertoast: ^8.2.10
   flutter_feather_icons: ^2.0.0+1
   flutter_layout_grid: 2.0.7
