--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   pdf: ^3.11.2
   printing: ^5.14.0
   provider: ^6.1.2
+  semaphore_plus: ^0.3.1
   shared_preferences: ^2.5.1
   tuple: ^2.0.2
   url_launcher: ^6.3.1
