--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   assets_audio_player: ^3.1.1
   auto_size_text: ^3.0.0
+  cached_network_image: ^3.3.1
   connectivity_plus: ^6.1.2
   decorated_icon: ^1.2.1
   dio: ^5.8.0+1
