--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,6 +128,7 @@ flutter:
     - assets/konspekty/ksztalcenie/struktura_i_ksztaltowanie_duchowosci/
     - assets/konspekty/ksztalcenie/wstep_do_wychowania_duchowego/
 
+    - assets/poradnik/czynniki_i_mechanizmy_ksztaltowania_duchowosci/
     - assets/poradnik/dwie_roty_dwoch_przyrzeczen_harcerskich/
     - assets/poradnik/o_strukturze_i_ksztaltowaniu_duchowosci/
 
