--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -124,6 +124,7 @@ flutter:
     - assets/konspekty/harcerskie/zycie_i_swiat_prl/
 
     - assets/konspekty/ksztalcenie/
+    - assets/konspekty/ksztalcenie/czynniki_i_mechanizmy_ksztaltowania_duchowosci/
     - assets/konspekty/ksztalcenie/dwie_roty_dwoch_przyrzeczen_harcerskich/
     - assets/konspekty/ksztalcenie/struktura_i_ksztaltowanie_duchowosci/
     - assets/konspekty/ksztalcenie/wstep_do_wychowania_duchowego/
