--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -127,6 +127,7 @@ flutter:
     - assets/konspekty/ksztalcenie/czynniki_i_mechanizmy_ksztaltowania_duchowosci/
     - assets/konspekty/ksztalcenie/dwie_roty_dwoch_przyrzeczen_harcerskich/
     - assets/konspekty/ksztalcenie/struktura_i_ksztaltowanie_duchowosci/
+    - assets/konspekty/ksztalcenie/struktura_i_ksztaltowanie_duchowosci_old/
     - assets/konspekty/ksztalcenie/wstep_do_wychowania_duchowego/
 
     - assets/poradnik/czynniki_i_mechanizmy_ksztaltowania_duchowosci/
