--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  assets_audio_player: ^3.1.1
+  # assets_audio_player: ^3.1.1
   auto_size_text: ^3.0.0
   cached_network_image: ^3.3.1
   connectivity_plus: ^6.1.2
@@ -25,6 +25,7 @@ dependencies:
   html_pdf_widgets: ^0.0.2
   html_unescape: ^2.0.0
   implicitly_animated_reorderable_list_2: ^0.6.0
+  just_audio: ^0.9.46
   linked_scroll_controller: ^0.2.0
   logger: ^2.5.0
   material_design_icons_flutter: ^7.0.7296
