--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,12 @@ dependencies:
   html_pdf_widgets: ^0.0.2
   html_unescape: ^2.0.0
   implicitly_animated_reorderable_list_2: ^0.6.0
-  # just_audio: ^0.9.46  # making audio_session fail on app build
-  just_audio:
-    git:
-      url: https://github.com/Princeyyyy/just_audio/
-      branch: master
-      path: just_audio
+  just_audio: ^0.9.46  # making audio_session fail on app build
+#  just_audio:
+#    git:
+#      url: https://github.com/Princeyyyy/just_audio/
+#      branch: master
+#      path: just_audio
 
   linked_scroll_controller: ^0.2.0
   logger: ^2.5.0
