--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -137,6 +137,7 @@ flutter:
     - assets/poradnik/czynniki_i_mechanizmy_ksztaltowania_duchowosci/
     - assets/poradnik/dwie_roty_dwoch_przyrzeczen_harcerskich/
     - assets/poradnik/o_strukturze_duchowosci/
+    - assets/poradnik/wychowanie_przez_wysmianie/
 
     - assets/wiersze/
 
