--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -138,6 +138,7 @@ flutter:
     - assets/poradnik/dwie_roty_dwoch_przyrzeczen_harcerskich/
     - assets/poradnik/o_strukturze_duchowosci/
     - assets/poradnik/wychowanie_przez_wysmianie/
+    - assets/poradnik/przykladowa_strategia_rozwoju_duchowego/
 
     - assets/wiersze/
 
