--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -140,6 +140,9 @@ flutter:
     - assets/poradnik/wychowanie_przez_wysmianie/
     - assets/poradnik/przykladowa_strategia_rozwoju_duchowego/
 
+    - assets/songs/
+    - assets/songs/song_words/
+
     - assets/wiersze/
 
     - fonts/
