--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,11 @@ dependencies:
   dio: ^5.8.0+1
   fluttertoast: ^8.2.10
   flutter_feather_icons: ^2.0.0+1
-  flutter_layout_grid: 2.0.7
+  flutter_layout_grid: ^2.0.7
   flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.17
-  flutter_widget_from_html: ^0.15.3
-  html_pdf_widgets: ^0.0.2
+  flutter_widget_from_html: ^0.16.0
+  html_pdf_widgets: ^0.0.3
   html_unescape: ^2.0.0
   implicitly_animated_reorderable_list_2: ^0.6.0
   just_audio: ^0.9.46
