--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   tuple: ^2.0.2
   url_launcher: ^6.3.1
   uuid: ^3.0.7
-  webfeed_plus: ^1.1.2
+#  webfeed_plus: ^1.1.2
+  rss_dart: ^1.0.13
   youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
