--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   # assets_audio_player: ^3.1.1
+  animated_reorderable_list: ^1.3.0
   auto_size_text: ^3.0.0
   cached_network_image: ^3.3.1
   connectivity_plus: ^6.1.2
