--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   flutter_widget_from_html: ^0.16.0
   html_pdf_widgets: ^0.0.3
   html_unescape: ^2.0.0
-  implicitly_animated_reorderable_list_2: ^0.6.0
+#  implicitly_animated_reorderable_list_2: ^0.6.0
   just_audio: ^0.9.46
   linked_scroll_controller: ^0.2.0
   logger: ^2.5.0
