--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^2.4.6
-  source_gen: ^1.5.0
-  analyzer: ^6.3.0
+  # Autogeneration of code
+  build_runner: ^2.7.1
+  source_gen: ^4.0.0
+  analyzer: ^8.1.1
+
+  lefthook_dart: ^1.0.8
 
 
 # For information on the generic Dart part of this file, see the
