--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,3 +4,5 @@ pre-commit:
       run: dart run build_runner build --delete-conflicting-outputs
       stage_fixed: true
       glob: "lib/values/people.dart"
+      run_after:
+        - git diff --exit-code
