--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,8 +1,6 @@
 pre-commit:
   commands:
     build_runner:
-      run: dart run build_runner build --delete-conflicting-outputs
+      run: dart run build_runner build --delete-conflicting-outputs && git diff --exit-code
       stage_fixed: true
       glob: "lib/values/people.dart"
-      run_after:
-        - git diff --exit-code
