--- a/assets/sprawnosci/zhp_zuch_sim_2022/group4@przyrodnicze/_data.yaml
+++ b/assets/sprawnosci/zhp_zuch_sim_2022/group4@przyrodnicze/_data.yaml
@@ -1,3 +1,11 @@
 slug: przyrodnicze
 name: Przyrodnicze
 
+tags:
+  - '#bliskość natury'
+  - '#szacunek do przyrody'
+  - '#ekologia'
+  - '#natura'
+  - '#las'
+  - '#cudnatury'
+
