--- a/assets/sprawnosci/zhp_zuch_sim_2022/group6@spoleczno_obywatelskie/family4@znawca_unii_europejskiej/2@znawca_unii_europejskiej$2/_data.yaml
+++ b/assets/sprawnosci/zhp_zuch_sim_2022/group6@spoleczno_obywatelskie/family4@znawca_unii_europejskiej/2@znawca_unii_europejskiej$2/_data.yaml
@@ -1,5 +1,7 @@
 slug: znawca_unii_europejskiej
 name: 'Znawca Unii Europejskiej'
+hiddenNames:
+  - 'Obywatel Unii Europejskiej'
 level: 2
 tasks:
   - 'Wiem, co to jest Unia Europejska i po co powstała. Przygotowałem(-am) do zuchówki gazetkę o UE.'
