--- a/assets/sprawnosci/zhr_harc_d_sim_2023/_data.yaml
+++ b/assets/sprawnosci/zhr_harc_d_sim_2023/_data.yaml
@@ -1,2 +1,5 @@
 slug: zhr_harc_d_sim_2023
 name: Sprawności Harcerek ZHR
+source: 'Sprawności harcerek, Związek Harcerstwa Rzeczpospolitej, 2023 r.'
+male: false
+female: true
