--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   animated_reorderable_list: ^1.3.0
+  archive: 4.0.7
   auto_size_text: ^3.0.0
   cached_network_image: ^3.3.1
   connectivity_plus: ^7.0.0
@@ -36,6 +37,7 @@ dependencies:
   native_device_orientation: ^2.0.3
   oktoast: ^3.4.0
   open_filex: ^4.7.0
+  path_provider: ^2.1.5
   pdf: ^3.11.2
   printing: ^5.14.0
   provider: ^6.1.2
@@ -152,6 +154,8 @@ flutter:
 
     - assets/wiersze/
 
+    # Isar DB
+    - assets/sprawnosci_db.isar.tar
 
     # Sprawnosci book data (YAMLs and icons)
     - assets/sprawnosci/common/zhr_common/duch_i_charakter/dzielnosc/
@@ -2898,9 +2902,6 @@ flutter:
     - assets/sprawnosci/zhp_harc_sim_2003_wodne/group9@nurk/family1@foka/2@foka$2/
     - assets/sprawnosci/zhp_harc_sim_2003_wodne/group9@nurk/family1@foka/3@foka$3/
     - assets/sprawnosci/zhp_harc_sim_2003_wodne/group9@nurk/family1@foka/4@foka$4/
-
-    # Isar DB
-    - assets/sprawnosci_db.isar/
 
     # Fonts
     - fonts/
