--- a/assets/sprawnosci/zhp_harc_sim_2022/group10@naukowe/family3@naukowiec/1@naukowiec$1/_data.yaml
+++ b/assets/sprawnosci/zhp_harc_sim_2022/group10@naukowe/family3@naukowiec/1@naukowiec$1/_data.yaml
@@ -3,7 +3,7 @@ name: 'Naukowiec'
 level: 1
 comment: 'Dostrzega zależności w świecie. Umie zorganizować proste doświadczenie i zauważa zachodzące zjawiska.'
 tasks:
-  - 'Wziąłem(-am) udział w pokazach naukowych, festiwalu nauki lub warsztatach naukowych. Zauważyłem(-am) warunki potrzebne do przeprowadzania doświadczeń.'
+  - 'Wziąłem(wzięłam) udział w pokazach naukowych, festiwalu nauki lub warsztatach naukowych. Zauważyłem(-am) warunki potrzebne do przeprowadzania doświadczeń.'
   - 'Odwiedziłem(-am) centrum nauki. Umiem wskazać, które eksperymenty mogę powtórzyć w domu, a które wymagają szczególnych warunków.'
   - 'Przeprowadziłem(-am) eksperyment rozciągnięty w czasie np. hodowlę kryształów lub rośliny, szczegółowy kalendarz pogody. Prowadziłem(-am) dziennik doświadczenia notując obserwacje.'
 
