--- a/assets/sprawnosci/zhp_harc_sim_2022/group12@sportowe/family1@zawodnik/2@zawodnik$2/_data.yaml
+++ b/assets/sprawnosci/zhp_harc_sim_2022/group12@sportowe/family1@zawodnik/2@zawodnik$2/_data.yaml
@@ -5,6 +5,6 @@ comment: 'Regularnie ćwiczy wybraną dyscyplinę sportów zespołowych oraz ucz
 tasks:
   - 'Nauczyłem(-am) innych zasad gry mojej ulubionej dyscypliny sportów zespołowych (np. siatkówki, piłki nożnej, koszykówki, footballu amerykańskiego, piłki ręcznej).'
   - 'W czasie próby trenowałem(-am) systematycznie min. raz w tygodniu. Skompletowałem(-am) niezbędny sprzęt umożliwiający treningi, np. korki, kask.'
-  - 'Wraz z drużyną wziąłem(wzięłam) udział w zawodach (szkolnych/harcerskich) w wybranej dyscyplinie sportu zespołowego.'
+  - 'Wraz z drużyną wziąłem(am) udział w zawodach (szkolnych/harcerskich) w wybranej dyscyplinie sportu zespołowego.'
   - 'W czasie rozgrywki wykazałem(-am) się dyscypliną taktyczną (wykonałem(-am) zalecenia trenera obejmujące pozycję oraz styl gry).'
 
