--- a/assets/sprawnosci/zhp_harc_sim_2022/group12@sportowe/family2@gimnastyk/4@gimnastyk$4/_data.yaml
+++ b/assets/sprawnosci/zhp_harc_sim_2022/group12@sportowe/family2@gimnastyk/4@gimnastyk$4/_data.yaml
@@ -4,5 +4,5 @@ level: 4
 comment: 'Osiągnął(-ęła) poziom mistrzowski w wybranym rodzaju gimnastyki. Propaguje gimnastykę w swoim środowisku lokalnym.'
 tasks:
   - 'W ciągu miesiąca nauczyłem(-am) się wykonywać ćwiczenie, którego wcześniej nie byłem(-am) w stanie wykonać.'
-  - 'Zorganizowałem(-am) lub wziąłem(wzięłam) udział w dowolnej akcji popularyzującej dany rodzaj treningu (zawody, dni otwarte, festiwal zumby, gimnastyki, kalisteniki, jogi itp..) wśród okolicznych mieszkańców.'
+  - 'Zorganizowałem(-am) lub wziąłem(am) udział w dowolnej akcji popularyzującej dany rodzaj treningu (zawody, dni otwarte, festiwal zumby, gimnastyki, kalisteniki, jogi itp..) wśród okolicznych mieszkańców.'
 
