--- a/assets/sprawnosci/zhr_harc_c_sim_2023/_data.yaml
+++ b/assets/sprawnosci/zhr_harc_c_sim_2023/_data.yaml
@@ -3,3 +3,4 @@ name: Sprawności Harcerzy ZHR
 source: 'Sprawności harcerzy, Związek Harcerstwa Rzeczpospolitej, 1 czerwca 2020 r. (poprawione w 2023 r.)'
 male: true
 female: false
+iconsMonochrome: true
