--- a/assets/sprawnosci/zhr_harc_d_sim_2023/_data.yaml
+++ b/assets/sprawnosci/zhr_harc_d_sim_2023/_data.yaml
@@ -3,3 +3,4 @@ name: Sprawności Harcerek ZHR
 source: 'Sprawności harcerek, Związek Harcerstwa Rzeczpospolitej, 2023 r.'
 male: false
 female: true
+iconsMonochrome: true
