--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dev_dependencies:
   isar_community_generator: ^3.3.0-dev.3
 
   lefthook_dart: ^1.0.8
+  test: ^1.26.2
 
 
 # For information on the generic Dart part of this file, see the
