--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -149,6 +149,7 @@ flutter:
     - assets/poradnik/o_strukturze_duchowosci/
     - assets/poradnik/wychowanie_przez_wysmianie/
     - assets/poradnik/przykladowa_strategia_rozwoju_duchowego/
+    - assets/poradnik/wspolzawodnictwo/
 
     - assets/songs/
     - assets/songs/song_words/
