--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   connectivity_plus: ^7.0.0
   decorated_icon: ^1.2.1
   dio: ^5.8.0+1
+  dropdown_button2: ^2.3.9
   fluttertoast: ^9.0.0
   flutter_feather_icons: ^2.0.0+1
   flutter_layout_grid: ^2.0.7
