--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -124,6 +124,7 @@ flutter:
     - assets/konspekty/harcerskie/swieczka_prawa_zuchowego/
     - assets/konspekty/harcerskie/staly_spowiednik/
     - assets/konspekty/harcerskie/sznury_funkcje_stopnie/
+    - assets/konspekty/harcerskie/uzaleznienia_behawioralne/
     - assets/konspekty/harcerskie/warta_nocna/
     - assets/konspekty/harcerskie/wedrowka/
     - assets/konspekty/harcerskie/wedrowka_bez_zasobow/
