--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   pdf: ^3.11.2
   printing: ^5.14.0
   provider: ^6.1.2
+  qr_code_dart_scan: ^0.11.1
+  qr_flutter: ^4.1.0  # generator
   rss_dart: ^1.0.13
   semaphore_plus: ^0.3.1
   shared_preferences: ^2.5.3
