--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ flutter:
     - assets/konspekty/harcerskie/biwak_bez_nadzoru/
     - assets/konspekty/harcerskie/budowanie_kapliczki/
     - assets/konspekty/harcerskie/budowanie_szopki_bozonarodzeniowej/
+    - assets/konspekty/harcerskie/dom_wariatow/
     - assets/konspekty/harcerskie/druzynowe_mycie_w_jeziorze/
     - assets/konspekty/harcerskie/druzynowe_przekazanie_bsp/
     - assets/konspekty/harcerskie/dwie_roty_dwoch_przyrzeczen_harcerskich/
