--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
 
   animated_reorderable_list: ^1.3.0
-  archive: 4.0.7
+  archive: ^4.0.9
   auto_size_text: ^3.0.0
   cached_network_image: ^3.3.1
   connectivity_plus: ^7.0.0
