--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.17
   flutter_widget_from_html: ^0.17.0
-  html_pdf_widgets: ^0.0.4
+  html_pdf_widgets:
+    git:
+      url: https://github.com/n3o2k7i8ch5/htmltopdfwidgets.git
   html_unescape: ^2.0.0
   isar_community: ^3.3.0
   isar_community_flutter_libs: ^3.3.0
